Improve navbar layout,padding/fix issue on mobile

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -11,7 +11,7 @@
 }
 
 #navbarDropdownMenuLink {
-  padding-left: 130px;
+  padding-left: 30px;
 }
 
 @media screen and (max-width: 974px) {
